[package]
name = "tokio-ns-jail"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ns-jail"
path = "src/main.rs"

[dependencies]
bitflags = "2.10.0"
nix = { version = "0.30.1", features = ["sched", "mount", "process", "user", "fs", "signal", "term"] }
pin-project-lite = "0.2.16"
tokio = { version = "1.48.0", features = ["net", "macros", "io-util", "fs", "rt"] }
